# test

./: .replit  app.py  database.py  models.py  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
FlipkartClone/: .gitignore  README.md  SETUP_GUIDE.md  app.py  auth.py  database.py  models.py  replit.md
FlipkartClone/scripts/: seed.py
FlipkartClone/services/: inventory.py  nearby_search.py  route_planner.py
FlipkartClone/static/: firebase-messaging-sw.js
FlipkartClone/static/css/: style.css
FlipkartClone/templates/: add_product.html  base.html  cart.html  checkout.html  forgot_password.html  index.html  login.html  onboarding.html  orders.html  product_detail.html  products.html  register.html  reset_password.html  seller_dashboard.html  seller_orders.html  verified.html
attached_assets/: Pasted--1-User-Side-Features-A-Mode-Switching-1-Switch-between-a-Online-Mode-Standard-eCommerc-1762791644089_1762791644093.txt  Pasted--Overall-Design-Feel-The-BuddyShop-interface-should-have-a-modern-Gen-Z-aesthetic-clean-mini-1762790066855_1762790066855.txt
instance/: ecommerce.db
scripts/: seed.py
services/: geolocation.py  reviews.py  route_planner.py
static/css/: style.css
static/js/: main.js
templates/: add_product.html  base.html  forgot_password.html  login.html  onboarding.html  orders.html  pickup_items.html  product_detail.html  products.html  reset_password.html  route_view.html  seller_dashboard.html  seller_orders.html
