[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.1",
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.49.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "werkzeug>=3.1.3",
]
